# fast-bandits

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst
fastbandits/algo/: ucb.py
fastbandits/core/: regret.py  rollout.py  statistics.py
tests/: env.py  test_1d.py  test_n_d.py  test_nd.py  test_one_d.py
xbandits/algo/: ucb.py
xbandits/core/: rollout.py
