[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbandits"
version = "0.1.0"
description = "Vectorized bandit algorithms in NumPy and Cython"
authors = [{name = "Jialin Yi", email = "jialinyi@sas.upenn.edu"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=xbandits"
testpaths = ["tests"]